# falconweb

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: attendance.py  auth.py  facebook.py  files.py  grades.py  school.py  users.py
backend/app/core/: audit.py  config.py  dependencies.py  security.py  two_phase_commit.py
backend/app/db/: mongo.py  postgres.py
backend/app/models/: grading.py  transmutation.py  user.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/faculty/: page.tsx
frontend/src/app/student/: page.tsx
frontend/src/lib/: api.ts
